k8s/k3s/services-nodeport.yaml
# NodePortを使用した直接IPアクセス用サービス設定

apiVersion: v1
kind: Service
metadata:
  name: api-nodeport
  namespace: pengovr
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30000
  selector:
    app: api
---
apiVersion: v1
kind: Service
metadata:
  name: ui-nodeport
  namespace: pengovr
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
  selector:
    app: ui
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-nodeport
  namespace: pengovr
spec:
  type: NodePort
  ports:
    - port: 27017
      targetPort: 27017
      nodePort: 30017
  selector:
    app: mongo
---
