k8s/k3s/ui-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: pengovr
  labels:
    app: ui
spec:
  ports:
    - port: 3001
      targetPort: 80
  selector:
    app: ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: pengovr
  labels:
    app: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - name: ui
          image: pengovr-ui:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: '256Mi'
              cpu: '100m'
            limits:
              memory: '512Mi'
              cpu: '200m'
